# Python-Oracle-Toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: create_dataframe.py  get_connection_params.py  modify_file_path.py  process_sql_query.py
notebooks/: notebook1.ipynb
src/python_oracle_toolkit/: __init__.py  get_connection_params.py  process_sql_query.py
utils/: __init__.py  create_dataframe.py  get_connection_params.py  process_sql_query.py
